<resources>
    <string name="app_name">Mystery Shopper</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password_lenght">Password must be > 5 characters</string>
    <string name="invalid_password">Password required</string>
    <string name="login_failed">Login failed</string>
    <string name="registration_failed">regitration failed</string>
    <string name="email_not_inserted">e-mail not inserted \nplese insert a valid mail</string>
    <string name="no_item_to_show">"List is empty "</string>
    <string name="id_store_label">id store</string>
    <string name="search_for_hire">search for hire</string>
    <string name="search">search</string>
    <string name="manager_label">manager</string>
    <string name="city">city</string>
    <string name="address">address</string>
    <string name="add">add</string>
    <string name="shop_added">"shop added "</string>
    <string name="login_success">login success</string>
    <string name="shop_not_added">shop didn\'t add , plz try again</string>
    <string name="field_required">required field</string>
    <string name="cancel">Cancel</string>
    <string name="reg_as_employer">Register as employer</string>
    <string name="register_as_shopper">Register as shopper</string>
    <string name="show_shoppers">shoppers available</string>
    <string name="user_updated">user updated</string>
    <string name="hire">hire</string>
    <string name="add_fee">fee</string>
    <string name="hiring_request">there is an hiring request for you</string>
    <string name="shoppers">Shopper</string>
    <string name="place">Where :</string>
    <string name="when">When :</string>
    <string name="payment">Fee :</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="notification_from">from :</string>
    <string name="notification_of_employment">Notification of employment</string>
    <string name="details">Expand to see detailes!</string>
    <string name="show">show</string>
    <string name="response_notification">shopper response</string>
    <string name="notification_response">request</string>
    <string name="notification_has">is</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accepted">accepted</string>
    <string name="declined">declined</string>
    <string name="waiting">waiting</string>
    <string name="done">done</string>
    <string name="loading_success">loading success</string>
    <string name="add_image">add image</string>
    <string name="notification_server_key">AAAAJB3_Ass:APA91bGlQIvYUJHaFKCTcxX8ILKpBNUERP67-kimvzgLXIvwVNQHOrSCIB_CRdJuDa2-V12K_40uRbvrWMlFuuATm6I6I2GyZug0MvhAs3KK-_GFAktIj_rkZC1IFzA6EiJu5C-qkzKL</string>
    <string name="notification_request">the request</string>
    <string name="Ok">OK</string>
    <string name="date_of_engage">date</string>
    <string name="title_activity_maps">Map</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="cf">C.F.</string>
    <string name="total">Total</string>
    <string name="valute">€</string>
    <string name="complete_name">Complete name</string>
    <string name="complete_address">Complete address</string>
    <string name="category">Category</string>
    <string name="iva">IVA</string>
</resources>
