<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/toolbar_shape_background"
    android:orientation="vertical"
    android:padding="60dp"
    tools:context=".activity.RegisterShopperActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_text_shape"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/labelAndText"
        android:textColorHint="@color/labelAndText" />


    <EditText
        android:id="@+id/surnameEditTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_text_shape"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/labelAndText"
        android:textColorHint="@color/labelAndText" />


    <EditText
        android:id="@+id/addressEditTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_text_shape"
        android:hint="@string/address"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/labelAndText"
        android:textColorHint="@color/labelAndText" />


    <EditText
        android:id="@+id/cityEditTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_text_shape"
        android:hint="@string/city"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/labelAndText"
        android:textColorHint="@color/labelAndText" />


    <EditText
        android:id="@+id/cfEditTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_text_shape"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:hint="@string/cf"
        android:textColor="@color/labelAndText"
        android:textColorHint="@color/labelAndText"/>


    <EditText
        android:id="@+id/emailEditRegTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_text_shape"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:hint="@string/prompt_email"
        android:textColor="@color/labelAndText"
        android:textColorHint="@color/labelAndText"/>


    <EditText
        android:id="@+id/passwordEditRegTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/background_text_shape"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/labelAndText"
        android:textColorHint="@color/labelAndText" />


    <Button
        android:id="@+id/image_add_label"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/toolbar_shape_background"
        android:clickable="true"
        android:text="@string/add_image"
        android:textColor="@color/labelAndText"
        android:textSize="24dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/button_shape"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/labelAndText"
        android:textSize="18sp"
        android:visibility="visible" />


</LinearLayout>

