<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar_dialog"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/title_dialog"
        android:textSize="24dp"
        android:textColor="@color/labelAndText"
        android:textAlignment="center"
        android:text="@string/action_sign_in_short"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/labelAndText"
            android:background="@drawable/button_shape"
            android:id="@+id/reg_shop_button"
            android:text="@string/register_as_shopper"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:textColor="@color/labelAndText"
            android:background="@drawable/button_shape"
            android:id="@+id/reg_empl_button"
            android:text="@string/reg_as_employer"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/retry_button"
            android:textColor="@color/labelAndText"
            android:background="@drawable/button_shape"
            android:text="@string/cancel"/>


    </LinearLayout>
</LinearLayout>