<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="60dp"
    android:background="@drawable/toolbar_shape_background"
    tools:context=".activity.RegisterEmployerActivity">

    <EditText
        android:id="@+id/nameEmployerEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_weight="1"
        android:background="@drawable/background_text_shape"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/labelAndText"
        android:textColorHint="@color/labelAndText" />
    <EditText
        android:id="@+id/categoryEditTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_weight="1"
        android:background="@drawable/background_text_shape"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/labelAndText"
        android:textColorHint="@color/labelAndText" />


    <EditText
        android:id="@+id/pIvaEditTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_weight="1"
        android:background="@drawable/background_text_shape"
        android:ems="10"
        android:hint="@string/iva"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/labelAndText"
        android:textColorHint="@color/labelAndText" />


            <EditText
                android:id="@+id/emEmailEditRegTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:background="@drawable/background_text_shape"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:hint="@string/prompt_email"
                android:textColor="@color/labelAndText"
                android:textColorHint="@color/labelAndText"/>


    <EditText
        android:id="@+id/emPasswordEditTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:layout_weight="1"
        android:background="@drawable/background_text_shape"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/labelAndText"
        android:textColorHint="@color/labelAndText" />

        <Button
            android:id="@+id/emRegButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="@drawable/button_shape"
            android:textColor="@color/labelAndText"
            android:text="@string/action_sign_in_short" />



</LinearLayout>