<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_dialog_hire"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/id_store_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/id_shop_label"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/labelAndText" />

        <EditText
            android:id="@+id/manager_name_store_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/manager_label"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/labelAndText" />

        <EditText
            android:id="@+id/city_store_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/city"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/labelAndText" />

        <EditText
            android:id="@+id/address_store_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/address"
            android:inputType="text"
            android:textAlignment="center"

            android:textColor="@color/labelAndText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_store_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/add"
                android:textColor="@color/labelAndText" />

            <Button
                android:id="@+id/button_store_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/cancel"
                android:textColor="@color/labelAndText" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>