<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/id_store_label"
            android:textSize="12dp"
            android:id="@+id/store_id_label"
            android:layout_margin="8dp"
            />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:text="XXXX"
          android:textSize="12dp"
          android:id="@+id/store_id_ref"
          android:layout_margin="8dp"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="Address"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="XXXXXX"
            android:id="@+id/address_store_ref"
            android:inputType="textMultiLine"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/shoppers"
        android:textSize="12dp"
        android:id="@+id/shopper_id_label"
        android:layout_margin="8dp"
        />
        <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="XXXX"
        android:textSize="12dp"
        android:id="@+id/mail_shopper_ref"
        android:layout_margin="8dp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

      <EditText
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_margin="8dp"
          android:gravity="bottom"
          android:textSize="12sp"
          android:inputType="numberDecimal"
          android:hint="@string/add_fee"
          android:id="@+id/fee_edtxt_ref"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="EURO"
            android:textSize="12sp"
            android:gravity="bottom"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/date_picker_ref"
        android:calendarTextColor="@color/labelAndText"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_weight="4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_hire"
            android:layout_margin="15dp"
            android:text="@string/hire"
            android:background="@drawable/button_shape"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_cancel_ref"
            android:layout_margin="15dp"
            android:text="@string/cancel"
            android:background="@drawable/button_shape"
            />

    </LinearLayout>

</LinearLayout>